--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -38,7 +38,7 @@
 			<h2> {{ titulo }} <small> | SICDOC.</small></h2>
 			<hr class="colorgraph">
 
-<!-- 
+<!--
       <div class="form-group">
             <angular2-multiselect [data]="itemList" name="selectPaises"
                           [settings]="settings"
@@ -46,7 +46,7 @@
                           (onSelect)="onItemSelect($event)"
                           (onDeSelect)="OnItemDeSelect($event)"
                           (onSelectAll)="onSelectAll($event)"
-                          (onDeSelectAll)="onDeSelectAll($event)">                          
+                          (onDeSelectAll)="onDeSelectAll($event)">
             </angular2-multiselect>
       </div> -->
       <!-- <br> -->
@@ -81,16 +81,16 @@
                <h6 title="La Comunicación no requiere dar seguimiento o ingresar acciones, por ello se Finaliza" class="text-on-pannel text-primary">
                  <strong class="text-uppercase">
                    <label class="custom-control custom-checkbox">
-                     <input type="checkbox" name="chkSinSeguimiento" class="custom-control-input chkSinSeguimiento" 
+                     <input type="checkbox" name="chkSinSeguimiento" class="custom-control-input chkSinSeguimiento"
                          (click)="checkSinSinSeguimiento()" >
                      <span class="custom-control-indicator"></span>
                      <span class="custom-control-description">Comunicación sin Seguimiento</span>
-                     <input style="width:0px;height:0px;color:white" type="text" value="0" name="estadoFin" id="estadoFin" >                  
+                     <input style="width:0px;height:0px;color:white" type="text" value="0" name="estadoFin" id="estadoFin" >
                    </label>
                  </strong>
                </h6>
             </div>
-           </div>          
+           </div>
          </div>
 
         </div>
@@ -271,7 +271,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
               <select #idDireccionSreciAcom="ngModel" class="form-control" name="idDireccionSreciAcom" id="idDireccionSreciAcom"
-                    ngControl="idDireccionSreciAcom" [(ngModel)]="comunicacion.idDireccionSreciAcom" tabindex="12" (change)="getlistaSubDireccionesSRECIAcom()" >
+                    ngControl="idDireccionSreciAcom" [(ngModel)]="comunicacion.idDireccionSreciAcom" tabindex="12" (change)="getlistaSubDireccionesSreciAll()" >
                   <option value="0">Sub Secretaría Acompañante </option>
                   <option *ngFor="let list of JsonOutgetlistaDireccionSRECIAcom" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
               </select>
@@ -280,7 +280,7 @@
          </div>
 
          <!-- Sub Direccion Acompañante del tema de la Comunicacion -->
-         <div class="col-xs-12 col-sm-6 col-md-6">
+         <!-- <div class="col-xs-12 col-sm-6 col-md-6">
            <div class="form-group">
              <select #idDeptoFuncionalAcom="ngModel" class="form-control" name="idDeptoFuncionalAcom" id="idDeptoFuncionalAcom"
                    ngControl="idDeptoFuncionalAcom" [(ngModel)]="comunicacion.idDeptoFuncionalAcom" tabindex="13"  >
@@ -289,10 +289,10 @@
              </select>
              <small class="form-text text-muted" *ngIf="idDeptoFuncionalAcom.value == 0 || idDeptoFuncionalAcom.value == null " >Debes Seleccionar una Dirección acompañante</small>
            </div>
-         </div>
+         </div> -->
 
         </div>
-        
+
         <!-- Otras Sub Direccion Acompañante del tema de la Comunicacion -->
         <div class="row">
          <div class="col-xs-12 col-sm-12 col-md-12">
@@ -303,8 +303,9 @@
                   (onSelect)="onItemSelect($event)"
                   (onDeSelect)="OnItemDeSelect($event)"
                   (onSelectAll)="onSelectAll($event)"
-                  (onDeSelectAll)="onDeSelectAll($event)">                          
+                  (onDeSelectAll)="onDeSelectAll($event)">
               </angular2-multiselect>
+              <small class="form-text text-muted" >Debes Seleccionar una Dirección acompañante</small>
             </div>
           </div>
         </div>
@@ -339,7 +340,7 @@
                    ngControl="setTomail" [(ngModel)]="comunicacion.setTomail"> <strong> {{selectedFuncionarioAll}} </strong></textarea>
                 <!-- <p><strong>Copia a:</strong> {{selectedFuncionarioAll}}</p> -->
                 <!-- Boton para limpiar la Data de Contactos -->
-                <button type="button" (click)="cleanContact()" class="btn btn-primary btn-sm">Borrar Contactos</button>
+                <button type="button" style="padding-left:5px" (click)="cleanContact()" class="btn btn-primary btn-sm">Borrar Contactos</button>
               </div>
             </div>
 
@@ -391,16 +392,28 @@
                       <th>Nombre de Documento</th>
                       <th>Extencion</th>
                       <th>Peso en Kb</th>
+                      <th>Seleccionar</th>
                     </tr>
                   </thead>
-                  <tbody id="newTable">
-                      <!-- Cuerpor de la Tabla  -->
+                  <tbody >
+                    <tr *ngFor="let suchnewrow of JsonOutgetListaDocumentos; let homeFormIndex = index">
+                              <td>{{ homeFormIndex + 1 }}</td>
+                              <td>{{ suchnewrow.nameDoc }}</td>
+                              <td>{{ suchnewrow.extDoc }}</td>
+                              <td>{{ suchnewrow.pesoDoc }}</td>
+                              <td>
+                                  <button  (click)="deleteRowHomeForm(homeFormIndex, suchnewrow.nameDoc, suchnewrow.extDoc )" type="button"
+                                      class="btn btn-danger" style="padding: 2px">
+                                    Borrar</button>
+                              </td>
+                      </tr>
                   </tbody>
                 </table>
 
-                <!-- <button type="button" name="button" (click)="createNewFileInput()">Agregar Nuevo</button>
-                <button type="button" name="button" (click)="removeFileInput()">Borrar</button>'
-                <button type="button" name="button" (click)="checkTodos()">Subir</button>' -->
+                <!-- <button type="button" name="button" (click)="createNewFileInput()">Agregar Nuevo</button> -->
+                <!-- <button type="button" name="button" id="btnDeleteDoc" (click)="deleteItemTable()"> Borrar</button> -->
+                <!-- <input type="text" name="" id="idDocumentoDel" disabled  value="" class="form-control input-lg"> -->
+                <!-- <button type="button" name="button" (click)="checkTodos()">Subir</button> -->
             </div>
 
             <div [innerHTML]="myHtml"></div>
